--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,15 +1,16 @@
 .sidebar_box {
 
-    position:fixed;
+    /* position:; */
     z-index: 10;
 
-    margin: 1vw;
+    /* margin: 1vw; */
+
 }
 .sidebar_box, .sidebar_items_box {
     height: 100vh !important;
-    width: 5vw;
+    width: 6vw;
     
-    background-color: transparent;
+    background-color: var(--color-vapor-3-2);
     
     display: flex;
     flex-direction: column !important;
