--- a/src/Containers/JellyfishView/JellyfishView.css
+++ b/src/Containers/JellyfishView/JellyfishView.css
@@ -2,22 +2,9 @@
     background-image: url('../../assets/images/jellyfish.png');
 
     height: 100vh;
-    width: 100vw;
+    width: 95vw;
 
+    position: relative;
+    z-index: 9;
 
 }
-
-#animationSlash {
-    animation: slash steps(60) 1s infinite
-               fade steps(60) 1s normal;
-  }
-  
-  @keyframes slash {
-    from{margin-top: -100vh;}
-    to{margin-top: 0vh}
-  }
-  
-  @keyframes fade {
-    from{opacity: 0%;}
-    to{opacity: 100%;}
-  }
