--- a/src/Containers/SquidView/SquidView.css
+++ b/src/Containers/SquidView/SquidView.css
@@ -1,7 +1,10 @@
 .squid_box {
     background-image: url('../../assets/images/squid.png');
 
+    
     height: 100vh;
-    width: 100vw;
+    width: 95vw;
+
+    transition: .5s;
 
 }
