--- a/src/index.css
+++ b/src/index.css
@@ -100,16 +100,17 @@ code {
 
 /* animations */
 
-/* #animationSlash {
-  animation: slash 1s infinite
-             fade 1s normal;
+
+#animationSlash {
+  animation: slash 1s normal;
 }
+
 
 @keyframes slash {
   from{width: 0%;}
   to{width: 100%}
 }
-
+/* 
 @keyframes fade {
   from{opacity: 0%;}
   to{opacity: 100%;}
