--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -18,7 +18,7 @@
     align-items: center;
 }
 
-.sidebar_home_box, .sidebar_about_box {
+.sidebar_home_box, .sidebar_about_box, .sidebar_transitions_choices_box {
     height: 3.6vw;
     width: 3.6vw;
     background-color: var(--color-vapor-3-2);
@@ -32,6 +32,25 @@
     border-radius: var(--border-radius-4);
 
     transition: var(--transition-2);
+
+    
+
+}
+
+.sidebar_transitions_choices_box {
+
+    content-visibility: hidden;
+    background-color: red;
+}
+
+.sidebar_transitions_choices_box:hover {
+
+    width: 20vw;
+    margin-left: 15.8vw;
+
+    background-color: red;
+
+    content-visibility: initial;
 
 }
 
