--- a/src/Containers/AnimalView/AnimalView.css
+++ b/src/Containers/AnimalView/AnimalView.css
@@ -4,10 +4,16 @@
     background-color: red;
     
     height: 100vh;
-    width: 95vw;
+    width: 100vw;
     
     position: relative;
     z-index: 9;
+
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
     
 }
 
@@ -41,3 +47,15 @@
     
 }
 
+.sidebar_item_box {
+    cursor: pointer;
+
+    transition: var(--transition-2);
+
+}
+
+.sidebar_item_box:hover {
+    transform: rotate(45deg);
+    
+    transition: var(--transition-2)
+}
