--- a/src/Containers/AnimalView/AnimalView.css
+++ b/src/Containers/AnimalView/AnimalView.css
@@ -11,7 +11,7 @@
 
     
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-end;
     align-items: flex-end;
     
@@ -47,6 +47,10 @@
     
 }
 
+.sidebar_inside_home {
+    background-color: red;
+}
+
 .sidebar_item_box {
     cursor: pointer;
 
@@ -58,4 +62,13 @@
     transform: rotate(45deg);
     
     transition: var(--transition-2)
+}
+
+.item_text {
+    background-color: lightblue;
+
+    height: 3em;
+    width: 7em;
+
+    margin-bottom: .2em;
 }
