--- a/src/Containers/AnimalView/AnimalView.css
+++ b/src/Containers/AnimalView/AnimalView.css
@@ -48,13 +48,35 @@
 }
 
 .sidebar_inside_home {
-    background-color: red;
+
+    height: 100vh;
+    width: 6vw;
+
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    background-color: transparent;
+
+    position: relative;
+    top: 0%;
 }
 
 .sidebar_item_box {
+    background-color: lightblue;
+
     cursor: pointer;
 
     transition: var(--transition-2);
+
+    height: 8vw;
+    width: 7vw;
+
+    content: fit;
+
+    margin-bottom: .2em;
 
 }
 
@@ -67,8 +89,8 @@
 .item_text {
     background-color: lightblue;
 
-    height: 3em;
-    width: 7em;
+    height: 5vw;
+    width: 5vw;
 
     margin-bottom: .2em;
 }
