--- a/src/Containers/AnimalView/AnimalView.css
+++ b/src/Containers/AnimalView/AnimalView.css
@@ -1,7 +1,7 @@
 .sea_box, .jellyfish_box, .puffer_box, .squid_box, .tortoise_box,.seahorse_box {
     /* background-image: url('../../assets/images/animal.png'); */
     
-    background-color: red;
+    /* background-color: red; */
     
     height: 100vh;
     width: 100vw;
@@ -52,6 +52,8 @@
     height: 100vh;
     width: 6vw;
 
+    margin-right: .2em;
+
     
     display: flex;
     flex-direction: column;
@@ -65,32 +67,38 @@
 }
 
 .sidebar_item_box {
-    background-color: lightblue;
+
+    padding: 0%;
+    background-color: rgba(173, 216, 230, 0.651);
+
 
     cursor: pointer;
 
     transition: var(--transition-2);
 
-    height: 8vw;
-    width: 7vw;
+    height: 5vw;
+    width: 5vw;
+
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     content: fit;
 
     margin-bottom: .2em;
 
+    border-radius: var(--border-radius-4);
+
 }
 
 .sidebar_item_box:hover {
-    transform: rotate(45deg);
+    background-color: rgb(143, 187, 202);
+
+    transform: rotate(5deg);
+
+    
     
     transition: var(--transition-2)
-}
-
-.item_text {
-    background-color: lightblue;
-
-    height: 5vw;
-    width: 5vw;
-
-    margin-bottom: .2em;
 }
