Animations are setted correctly: same button will set the closing animation and next photo's opening. There is a bug or problem that makes squid and seahorse unavailable and shows tortoise instead.

--- a/src/index.css
+++ b/src/index.css
@@ -103,14 +103,14 @@ code {
 /* endings */
 
 
-#animationMix {
+#animationMixEnd {
   animation: slashEnd steps(4) .5s normal
              /* transform2 2s normal; */
 }
 
 
 #animationSlashEnd {
-  animation: slash .5s normal;
+  animation: slashEnd .5s normal;
 }  
 
 
@@ -142,7 +142,7 @@ code {
 }  rotate
 
 #animationTransform2End {
-  animation: transform2 .5s normal;
+  animation: transform2End .5s normal;
 }  
 
 
