--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
+
+  height: 100vh;
+  width: 100vw;
+  
   text-align: center;
+
+  overflow: hidden;
 
   
   /* background-image: url('../src/assets/images/jellyfish.png'); */
