--- a/src/Containers/AnimalView/AnimalView.css
+++ b/src/Containers/AnimalView/AnimalView.css
@@ -6,14 +6,13 @@
     height: 100vh;
     width: 100vw;
     
-    position: relative;
-    z-index: 9;
+    z-index: 0;
 
     
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    align-items: flex-end;
+    align-items:flex-end;
     
 }
 .sea_box {
@@ -57,7 +56,7 @@
     height: 100vh;
     width: 6vw;
 
-    margin-right: .2em;
+    margin-right: 1%;
 
     
     display: flex;
@@ -67,7 +66,7 @@
 
     background-color: transparent;
 
-    position: relative;
+    position: absolute;
     top: 0%;
 }
 
@@ -84,6 +83,9 @@
     height: 5vw;
     width: 5vw;
 
+    min-width: fit-content;
+    min-height: 4em;
+
     
     display: flex;
     flex-direction: column;
@@ -93,6 +95,7 @@
     content: fit;
 
     margin-bottom: .2em;
+    margin-right: 1%;
 
     border-radius: var(--border-radius-4);
 
