Now selected animal is highlighted on sidebar.

--- a/src/Containers/AnimalView/AnimalView.css
+++ b/src/Containers/AnimalView/AnimalView.css
@@ -71,10 +71,14 @@
     top: 0%;
 }
 
+.animations_sidebar {
+    margin-right: 12%;
+}
+
 .sidebar_item_box {
 
     padding: 0%;
-    background-color: rgba(173, 216, 230, 0.651);
+    background-color: rgba(173, 216, 230, 0.9);
 
 
     cursor: pointer;
@@ -82,7 +86,7 @@
     transition: var(--transition-2);
 
     height: 5vw;
-    width: 5vw;
+    width: fit-content;
 
     min-width: fit-content;
     min-height: 4em;
@@ -97,6 +101,7 @@
 
     margin-bottom: .2em;
     margin-right: 1%;
+    padding-inline: 10%;
 
     border-radius: var(--border-radius-4);
 
@@ -110,4 +115,9 @@
     
     
     transition: var(--transition-2)
+}
+
+.selected {
+    background-color: rgb(26, 184, 236);
+
 }
